--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,73 @@
   </head>
 
   <body>
-    <%= yield %>
-    <%= javascript_pack_tag 'hello_vue' %>
+    <ul id="dropdown1" class="dropdown-content">
+      <li><a href="#!">one</a></li>
+      <li><a href="#!">two</a></li>
+      <li class="divider"></li>
+      <li><a href="#!">three</a></li>
+    </ul>
+    <nav class="nav-extended">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">OneScene</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <% if user_signed_in? %>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a class="dropdown-trigger" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a href="badges.html">環境設定</a></li>
+        </ul>
+        <% end %>
+      </div>
+      <% if user_signed_in? %>
+      <div class="nav-content">
+        <ul class="tabs">
+          <li class="tab"><a class="active" href="#test1">2018年</a></li>
+          <li class="tab"><a href="#test1">2017年</a></li>
+          <li class="tab"><a href="#test1">2016年</a></li>
+          <li class="tab"><a href="#test1">2015年</a></li>
+        </ul>
+      </div>
+      <% end %>
+    </nav>
+
+    <% if user_signed_in? %>
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="sass.html">マイページ</a></li>
+      <li><a href="badges.html">環境設定</a></li>
+    </ul>
+  <% end %>
+
+    <main>
+      <div class="container">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+        <!-- Page Content goes here -->
+        <%= yield %>
+      </div>
+    </main>
+
+    <footer class="page-footer">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Footer Content</h5>
+          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          © 2014 Copyright Text
+          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
